# rangemap

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.fuzz.md  README.md  appveyor.yml  bors.toml  build.rs  pre_commit.sh
.github/workflows/: ci.yml
benches/: benches.rs  kitchen_sink.rs
examples/: roster.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: rangemap_coalesce.rs  rangemap_gaps.rs  rangemap_inclusive_coalesce.rs  rangemap_inclusive_gaps.rs
src/: dense.rs  inclusive_map.rs  inclusive_set.rs  lib.rs  map.rs  operations.rs  range_trait.rs  range_wrapper.rs  readme.rs  set.rs  std_ext.rs  stupid_range_map.rs  ziprange.rs
src/map/: entry.rs  iterators.rs  tests.rs
