[package]
name = "rangemap"
version = "0.1.6"
authors = ["Jeff Parsons <jeff@parsons.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeffparsons/rangemap"
documentation = "https://docs.rs/rangemap"
homepage = "https://github.com/jeffparsons/rangemap"
description = """
Map data structure whose keys are stored as ranges.

Contiguous and overlapping ranges that map to the same value are coalesced into a single range.
"""
categories = ["data-structures"]
build = "build.rs"

[dependencies]

[build-dependencies]
# Upstream skeptic is broken on stable.
# See <https://github.com/budziq/rust-skeptic/pull/121#issuecomment-668634236>
# and linked issue.
skeptic = { git = 'https://github.com/andygauge/rust-skeptic', optional = true }

[dev-dependencies]
permutator = "0.3"
criterion = "0.2"
rand = "0.6"
chrono = "0.4" # For examples
# Upstream skeptic is broken on stable.
# See <https://github.com/budziq/rust-skeptic/pull/121#issuecomment-668634236>
# and linked issue.
skeptic = { git = 'https://github.com/andygauge/rust-skeptic'}

[features]
# Skeptic is only needed for doc generation.
# Gate it on an optional-but-default feature
# that people can disable if they don't want
# to pull in skeptic and all of its dependencies.
default = ["skeptic"]

[[bench]]
name = "kitchen_sink"
harness = false
