[package]
name = "rangemap"
version = "0.1.12"
authors = ["Jeff Parsons <jeff@parsons.io>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeffparsons/rangemap"
documentation = "https://docs.rs/rangemap"
homepage = "https://github.com/jeffparsons/rangemap"
description = """
Map and set data structures whose keys are stored as ranges.

Contiguous and overlapping ranges that map to the same value are coalesced into a single range.
"""
categories = ["data-structures"]

[dependencies]

[dev-dependencies]
permutator = "0.4"
criterion = "0.3"
rand = "0.8"
chrono = "0.4" # For examples
rustc_version = "0.4"

[features]
# So we can run doc tests from "README.md".
nightly = []

[[bench]]
name = "kitchen_sink"
harness = false
